# calcit-wasm-play

./: .compact-inc.cirru  .gitattributes  .gitignore  Cargo.toml  README.md  calcit.cirru  compact.cirru  deps.cirru  index.html  main.css  main.js  package.cirru  package.json
.github/workflows/: upload.yaml
examples/: try.rs
script/: main.css  main.js  main.mjs
src/: lib.rs
