[package]
name = "calcit-wasm-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# calcit = { path="../calcit" }
calcit = "0.7.6"
rpds = "0.13.0"
im_ternary_tree = "0.0.11"
wasm-bindgen = "0.2.87"
console_error_panic_hook = "*"
web-sys = { version="0.3.64", features=[ "console", 'Window' ] }
js-sys = "0.3.64"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
