[package]
name = "calcit-wasm-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# calcit = { path="../calcit" }
calcit = "0.9.6"
rpds = "1.1.0"
im_ternary_tree = "0.0.18"
wasm-bindgen = "0.2.95"
console_error_panic_hook = "*"
web-sys = { version = "0.3.72", features = ["console", 'Window'] }
js-sys = "0.3.72"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
